@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-20T00:38:22Z",
+  "timestamp" : "2022-05-20T08:12:00Z",
   "count_outdated" : 1204,
   "uniques_outdated" : 72,
-  "count" : 1550,
-  "uniques" : 86,
+  "count" : 1522,
+  "uniques" : 87,
   "views" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 90,
-      "count_minmax": [ 90, 95 ],
+      "count": 61,
+      "count_minmax": [ 61, 95 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -93,6 +93,13 @@
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
