@@ -1,10 +1,10 @@
 {
-  "count": 346,
+  "count": 318,
   "uniques": 3,
   "views": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 90,
+      "count": 61,
       "uniques": 1
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
