@@ -1,3 +1,10 @@
+2022-05-20T08:12:00Z:
+* notice: last 14d: unq all: 3 318
+* notice: prev accum: outdated-unq outdated-all / unq all: 72 1204 / 86 1550
+* notice: next accum: outdated-unq outdated-all / unq all: 72 1204 / 87 1522
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -29 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-06 2022-05-20]
+
 2022-05-20T00:38:22Z:
 * notice: last 14d: unq all: 3 346
 * notice: prev accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1539
